raffia/tests/error/scss/at-rule/error/no-argument.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ no-argument.scss:1:7
  │
1 │ @error;
  │       ^


